# perp-dex

./: Anchor.toml
programs/stockdex/: Cargo.toml
programs/stockdex/src/: error.rs  lib.rs  math.rs
programs/stockdex/src/instructions/: collateral.rs  init.rs  liquidity.rs  mod.rs  pools.rs  position.rs
programs/stockdex/src/state/: custody.rs  mod.rs  multisig.rs  oracle.rs  perps.rs  pool.rs  position.rs
tests/: stockdex.ts
